# se-toolkit-hackathon

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  nginx.conf
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  main.py
backend/app/database/: database.py
backend/app/dependencies/: __init__.py  dependencies.py
backend/app/errors/: __init__.py  auth.py  base.py  common.py  link.py  tag.py  user.py
backend/app/models/: __init__.py  associations.py  link.py  models.py  tag.py  user.py
backend/app/routers/: auth.py  links.py  tags.py  users.py
backend/app/schemas/: __init__.py  auth.py  link.py  schemas.py  tag.py
backend/app/services/: __init__.py  link_service.py  tag_service.py  user_service.py
frontend/: index.html  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts  index.ts  services.ts
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx  Register.tsx
frontend/src/types/: index.ts
